vcluster_versioned_docs/version-0.25.0/configure/vcluster-yaml/control-plane/components/host-path-mapper.mdx
---
title: HostPath Mapper
sidebar_label: hostPathMapper
sidebar_position: 5
sidebar_class_name: pro
description: Configure the HostPath Mapper component.
---

import HostPathMapper from '../../../../_partials/config/controlPlane/hostPathMapper.mdx'
import ProAdmonition from '../../../../_partials/admonitions/pro-admonition.mdx'

<ProAdmonition/>

Virtual cluster internal logging uses a separate component called the [HostPath Mapper](/docs/platform/administer/monitoring/central-hostpath-mapper). This component matches virtual pod and container names to their real physical names.

If you don't configure host path mapping, log collectors such as Loki, ELK, and Fluentd incorrectly resolve logs for vCluster pods.

<!-- vale off -->
## vCluster Open Source

### Enable the HostPath Mapper
<!-- vale on -->

Set `enabled: true` in the vCluster config to allow it to use the HostPath Mapper DaemonSet.

```yaml title="vcluster.yaml"
controlPlane:
  hostPathMapper:
    enabled: true
```

<!-- vale off -->
### Deploy the HostPath Mapper DaemonSet
<!-- vale on -->

After setting up the vCluster, deploy the HostPath Mapper component. Before you deploy the HostPath Mapper component, make sure the following requirements are met:

- Deploy the HostPath Mapper in the same namespace as the vCluster.
- Set the `.Values.VclusterReleaseName` field in the Helm chart to match the vCluster name.

For example, if the vCluster name is `my-vcluster` and the namespace is `my-namespace`, run the following command:

```bash title="Install the HostPath Mapper daemonset"
helm install vcluster-hpm vcluster-hpm \
  --repo https://charts.loft.sh \
  -n my-namespace \
  --set VclusterReleaseName=my-vcluster
```

After deployment, the HostPath Mapper DaemonSet starts running on every node that hosts vCluster workloads.

<!-- vale off -->
## vCluster Pro
<!-- vale on -->

<!-- vale off -->
The Central HostPath Mapper enables the following in a virtual cluster:
<!-- vale on -->

- Container-based logging used by tools such as fluentd and Logstash.
- Pod-based logging used by Grafana Loki.
- Velero restic backups.
- KubeVirt workloads.

For more information about configuring vCluster and installing the Central HostPath Mapper, see  [Central HostPath Mapper](/docs/platform/administer/monitoring/central-hostpath-mapper) in the platform documentation.

## Config reference

<HostPathMapper/>
